<resources>
    <string name="app_name">ListaDeTareas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listatareas">ListaTareas</string>
    <string name="agregar">Agregar</string>
    <string name="actualizar">Actualizar</string>
    <string name="no_tareas">No Tareas</string>
    <string name="ir_a_agregar_tareas">Ir a agregar tareas</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">eliminar</string>
    <string name="web">Web</string>
    <string name="low_priority">Low priority</string>
    <string name="prioridad">Prioridad</string>
    <string name="cargando">Cargando...</string>
    <string name="movie_empty">La lista viene vacio</string>
    <string name="detalles_de_la_movie">Detalles de la Movie</string>
    <string name="poster">poster</string>
    <string-array name="priorities">
        <item>Prioridad Alta</item>
        <item>Prioridad Media</item>
        <item>Prioridad Baja</item>
    </string-array>
    <string name="error_title">El titulo es obligatorio</string>
    <string name="error_descripcion">El descripcion es obligatorio</string>
    <string name="login">Login</string>
</resources>